# suai

./: .gitignore  lab-template.docx  lab-template.dotx
calculus/: ~$дз.doc  дз.docx
com-practices/: essay.docx  Задание 1.docx  Задание 2.docx  Задание 3.docx
comp-graphics/: Вопросы КГ.docx
op/: 4326_Томчук_ОП_ЛР10.docx  4326_Томчук_ОП_ЛР11.docx  4326_Томчук_ОП_ЛР12.docx  4326_Томчук_ОП_ЛР3.docx  4326_Томчук_ОП_ЛР4.docx  4326_Томчук_ОП_ЛР5.docx  4326_Томчук_ОП_ЛР6.docx  4326_Томчук_ОП_ЛР7.docx  4326_Томчук_ОП_ЛР8.docx  4326_Томчук_ОП_ЛР9.docx  CMakeLists.txt  pr1.cpp  test.cpp  test1.cpp
op/extra1/: extra1.docx  main_extra1.1.cpp  main_extra1.2.cpp
op/extra2/: expenses.txt  extra2.docx  flowchart.drawio  main_extra2.1.cpp  main_extra2.cpp  participants.txt
op/lab/: Coursework.Designer.cs  Coursework.cs  Lab1.Designer.cs  Lab1.cs  Lab10.Designer.cs  Lab10.cs  Lab11.Designer.cs  Lab11.cs  Lab12.Designer.cs  Lab12.cs  Lab1_1.Designer.cs  Lab1_1.cs  Lab2.Designer.cs  Lab2.cs  Lab3.Designer.cs  Lab3.cs  Lab4.Designer.cs  Lab4.cs  Lab5.Designer.cs  Lab5.cs  Lab6.Designer.cs  Lab6.cs  Lab7.Designer.cs  Lab7.cs  Lab8.Designer.cs  Lab8.cs  Lab9.Designer.cs  Lab9.cs  Menu.Designer.cs  Menu.cs  NewFileDialog.Designer.cs  NewFileDialog.cs  Program.cs  lab.csproj  lab.sln
op/lab01/: DirectoryClass.cs  FileClass.cs  FileSystemItemClass.cs  Form1.Designer.cs  Form1.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  lab01.sln
op/lab01/lab01/: 4326_Томчук_ОП_ЛР1.docx  MainForm.cs  Program.cs  lab01.csproj  lab01.sln
op/lab01/lab01classLib/: ClassDiagram1.cd  DirectoryClass.cs  FileClass.cs  FileSystemItemClass.cs
op/lab01classLib/: FileClass.cs
op/lab02/: 4326_Томчук_ОП_ЛР2.docx
op/lab02/lab02/: ClassDiagram1.cd  DirectoryClass.cs  FileClass.cs  FileSystemItemClass.cs  MainForm.Designer.cs  MainForm.cs  lab02.sln
op/lab1.1/: flowchart.drawio  main.cpp  main1.1.cpp
op/lab1.2/: lab1.2.docx  main.cpp  main1.2.cpp  main_unoptimized.cpp
op/lab1.3/: flowchart.drawio  input.txt  lab1.3.docx  main.cpp  output.txt  test.cpp
op/lab2.1/: flowchart.drawio  lab2.1.docx  main.cpp  main2.1.cpp  test2.1-2.cpp  test2.1.cpp
op/lab2.2/: flowchart.drawio  lab2.2.docx  main2.2.cpp
op/lab3.1/: lab3.1.docx  main3.1.cpp
op/lab3.2/: flowchart.drawio  lab3.2.docx  main3.2.cpp  recursion.drawio
op/lab4.1/: flowchart.drawio  lab4.1.docx  main4.1.cpp  test4.1.cpp
op/lab4.2/: flowchart.drawio  lab4.2.docx  main4.2.cpp  test4.2.cpp
op/lab5.1/: lab5.1.docx  main5.1.cpp
op/lab5.2/: flowchart.drawio  lab5.2.docx  main5.2.cpp
op/labClassLib/: BrowserDirectory.cs  BrowserFile.cs  BrowserFileSystemItem.cs  BrowserMetaFile.cs  BrowserTextFile.cs  ClassDiagram.cd  DirectoryClass.cs  FileClass.cs  FileSystemItemClass.cs  IFileSystemNode.cs
(+515 files in other folders)
