cmake_minimum_required(VERSION 3.13)
project(op)
set(CMAKE_CXX_STANDARD 14)

# Add main.cpp file of the project root directory as a source file
# set(SOURCE_FILES main.cpp)

# Add executable target with source files listed in SOURCE_FILES variable
# add_executable(simple_example ${SOURCE_FILES})

#add_executable(main1.1 lab1.1/main.cpp)
add_executable(main1.3 lab1.3/main.cpp)
add_executable(main2.1 lab2.1/main.cpp)

add_executable(scratch /Users/grigorijtomczuk/Library/Preferences/CLion2019.2/scratches/scratch.cpp)

add_executable(main3.1 lab3.1/main3.1.cpp)

add_executable(pr1 pr1.cpp)
